@@ -1,3 +1,9 @@
+2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b136
+
+ * Fix *
+
+ Logout Option not Available on all Application Pages.
+
 2008-08-18 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b135
 
  * Security Fix *
